content/en/examples/access/admission-webhook-match-conditions.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
webhooks:
- name: my-webhook.example.com
  matchPolicy: Equivalent
  rules:
  - operations: ['CREATE','UPDATE']
    apiGroups: ['*']
    apiVersions: ['*']
    resources: ['*']
  failurePolicy: 'Fail' # Optional: defaults to Fail
  matchConditions:
  - name: 'exclude-leases' # Each match condition must have a unique name
    expression: '!(request.resource.group == "coordination.k8s.io" && request.resource.resource == "leases")' # Match non-lease resources.
  - name: 'exclude-kubelet-requests'
    expression: '!("system:nodes" in request.userInfo.groups)' # Match requests made by non-node users.
  - name: 'breakglass'
    # Skip requests made by users authorized to 'breakglass' on this webhook.
    # The 'breakglass' API verb does not need to exist outside this check.
    expression: 'request.resource.group != "rbac.authorization.k8s.io" || !authorizer.group("admissionregistration.k8s.io").resource("validatingwebhookconfigurations").name("my-webhook.example.com").check("breakglass").allowed()'
