content/en/examples/access/validating-admission-policy-match-conditions.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata: {
  name: "demo-policy.example.com",
},
spec:
  failurePolicy: "Fail"
  matchConstraints:
    resourceRules:
      - apiGroups:   ["*"]
        apiVersions: ["*"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["*"]

  matchConditions: # Each match condition must have a unique name
    - name: 'exclude-leases'
      # Match non-lease resources.
      expression: >
        !(request.resource.group == "coordination.k8s.io" && request.resource.resource == "leases")

    - name: 'exclude-kubelet-requests'
      # Match requests made by non-node users.
      expression: >
        "system:nodes" in request.userInfo.groups

    - name: 'rbac' # Skip RBAC requests.
      expression: >
        request.resource.group != "rbac.authorization.k8s.io"

  validations:
    - expression: >
        !object.metadata.name.contains('demo') || object.metadata.namespace == 'demo'
